--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.2.3.v20140905</version>
+		<configuration>
+                	<httpConnector>
+                    		<port>9999</port>
+                	</httpConnector>
+            	</configuration>
             </plugin>
 			
 						<plugin>
